<resources>
    <string name="app_name">exsampling</string>
    <string name="day_n">Day %d</string>
    <string name="question_n">Question %d</string>
    <string name="statistics">Statistics</string>
    <string name="fill_in_time">Filling time</string>
    <string name="records_made">records made</string>
    <string name="records_missed">skipped</string>
    <string name="records_left">left</string>
    <string name="n_days_till_the_end_of_the_research">days until the end of the survey</string>
    <string name="from">from</string>
    <string name="until">to</string>
    <string name="notification_time">Notifications will</string>
    <string name="tutorial">Tutorial</string>
    <string name="make_sample_record">Make sample record</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="counter_default_value">0</string>
    <string name="happy_placeholder">Happy</string>
    <string name="placeholder_how_do_you_feel">How do you feel?</string>
    <string name="loading">Loading…</string>
    <string name="error">Error</string>
    <string name="contacts">Contact</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="signing_in">Signing in</string>
    <string name="sing_in">Sign in</string>
    <string name="participant_code">Participant code</string>
    <string name="cant_sign_in">Сan`t sign in?</string>
    <string name="help_code_text">Enter 8-digit participant code to sign in:</string>
    <string name="code_example">Code example</string>
    <string name="example_code">12140031</string>
    <string name="filling_in">Filling in</string>
    <string name="fill_in_notification">Notification to fill the diary</string>
    <string name="reminder_notification_title">Time to fill the diary!</string>
    <string name="reminder_notification_text">Click on notification to get started</string>
    <string name="failed_to_sign_in">Failed to sign in to account</string>
    <string name="error_screen_message">Error while loading</string>
    <string name="retry">Retry</string>
    <string name="str_anxiety">Anxiety</string>
    <string name="str_sleepy">Sleepy</string>
    <string name="str_negative">Negative</string>
    <string name="str_positive">Positive</string>
    <string name="str_stress">Stressed</string>
    <string name="str_excit">Excited</string>
    <string name="str_relax">Relaxed</string>
    <string name="str_depression">Depression</string>
    <string name="str_researcher">Researcher First name Last name</string>

    <plurals name="records_made">
        <item quantity="zero">Records made</item>
        <item quantity="one">Record made</item>
        <item quantity="two">Records made</item>
        <item quantity="few">Records made</item>
        <item quantity="many">Records made</item>
        <item quantity="other">Records made</item>
    </plurals>

    <plurals name="skipped">
        <item quantity="zero">Skipped</item>
        <item quantity="one">Skipped</item>
        <item quantity="two">Skipped</item>
        <item quantity="few">Skipped</item>
        <item quantity="many">Skipped</item>
        <item quantity="other">Skipped</item>
    </plurals>

    <plurals name="togo">
        <item quantity="zero">Left</item>
        <item quantity="one">Left</item>
        <item quantity="two">Left</item>
        <item quantity="few">Left</item>
        <item quantity="many">Left</item>
        <item quantity="other">Left</item>
    </plurals>

    <plurals name="days_till_the_end_of_research">
        <item quantity="zero">days until the end of the survey</item>
        <item quantity="one">one day until the end of the survey</item>
        <item quantity="two">days until the end of the survey</item>
        <item quantity="few">days until the end of the survey</item>
        <item quantity="many">days until the end of the survey</item>
        <item quantity="other">days until the end of the survey</item>
    </plurals>
</resources>