<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_block_rounded"
        android:padding="20dp">
        <TextView
            android:id="@+id/statsHeader"
            style="@style/TextHeader.sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_example"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/helpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/help_code_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statsHeader" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_block_rounded_outline"
            android:text="@string/example_code"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="gravity"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>