<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_block_rounded"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:id="@+id/notificationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_time"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notificationStartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/notificationTimeStartText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notificationTimeStartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/notificationStartLabel"
        app:layout_constraintTop_toBottomOf="@id/notificationLabel"
        tools:text="9:00" />

    <TextView
        android:id="@+id/notificationEndLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/until"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/notificationTimeEndText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notificationTimeEndText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/notificationStartLabel"
        app:layout_constraintTop_toBottomOf="@id/notificationTimeStartText"
        tools:text="21:00" />

</androidx.constraintlayout.widget.ConstraintLayout>